// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comments.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Empty1 = [
// comment
...];
type Empty2 = [// comment
...];
type Empty3 = [
...// comment
];
type Empty4 = [
...
// comment
];

=====================================output=====================================
type Empty1 = [...// comment];
type Empty2 = [...// comment];
type Empty3 = [...// comment];
type Empty4 = [...// comment];

================================================================================
`;

exports[`inexact.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Empty = [...];

type One = [number, ...];

=====================================output=====================================
type Empty = [...];

type One = [number, ...];

================================================================================
`;

exports[`labeled.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type T = [a: string, b: number];

=====================================output=====================================
type T = [a: string, b: number];

================================================================================
`;

exports[`optional.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type A = [a?: string, +b?: number, -c?: boolean];

// Unaffected
type B = [?string, [?string], (?string) => boolean];

=====================================output=====================================
type A = [a?: string, +b?: number, -c?: boolean];

// Unaffected
type B = [?string, [?string], (?string) => boolean];

================================================================================
`;

exports[`variance.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type T = [a: string, +b: number, -c: boolean];

=====================================output=====================================
type T = [a: string, +b: number, -c: boolean];

================================================================================
`;
